kustomization/overlays/prod/homeassistant/networkpolicy/allow-to-postgres-from-traefik.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-postgres-from-traefik-networkpolicy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: postgresql
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: cloudnative-pg
      cnpg.io/cluster: homeassistant-pg-cluster
      cnpg.io/podRole: instance
  policyTypes:
    - Ingress
